2007-12-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	Do not draw a status bar if the shadow is NONE.

2007-12-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	Add missing initilization of focus.padding.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.13.2 release.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/valgrind-suppressions:
	Added a suppression.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	Looks like the --log-file-exact option for valgrind is gone.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_tab):
	Fix a small warning by adding default values to the switch
	statements.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Modify some widgets background color if they are inside notebooks.
	(#488850, Federico Pelloni)

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_tab):
	Port the fix for bug #475291 to the other clearlooks styles.

2007-12-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Work around evolution ETree and ETable headers
	(#492372, Michael Monreal)

2007-12-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c: